--- a/ratchet/RatchetTest.html
+++ b/ratchet/RatchetTest.html
@@ -34,7 +34,7 @@
   <body>
   
 <header class="bar-title">
-  <h1 class="title">StayHungry ?</h1>
+  <h1 class="title">StayHungry</h1>
 </header>
 
 
